derive/tests/snapshots/uuid_auto_gen/SessionToken/get_all_session_tokens.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get all rows inside the `session_token` table.
    pub fn get_all_session_tokens<'a>(&'a self) -> impl Iterator<Item = SessionToken> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().session_token().iter()
    }
}
