derive/tests/snapshots/uuid_auto_gen/SessionToken/get_session_tokens_by_account_id.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get a `SessionToken` iterator that contains all rows in the `session_token` table whose value matches the value from the single-column btree index on the `account_id` column.
    pub fn get_session_tokens_by_account_id<'a>(
        &'a self,
        account_id: impl Into<AccountId>,
    ) -> impl Iterator<Item = SessionToken> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().session_token().account_id().filter(account_id.into().value())
    }
}
impl<T: crate::spacetimedsl::ReadContext> crate::spacetimedsl::ReadOnlyDSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get a `SessionToken` iterator that contains all rows in the `session_token` table whose value matches the value from the single-column btree index on the `account_id` column.
    pub fn get_session_tokens_by_account_id<'a>(
        &'a self,
        account_id: impl Into<AccountId>,
    ) -> impl Iterator<Item = SessionToken> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().session_token().account_id().filter(account_id.into().value())
    }
}
